--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-img-placeholder",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "vue2响应式图片占位",
   "main": "dist/index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "vue": "^2.3.3",
+    "vue-img-placeholder": "^0.0.2",
     "vue-loader": "^12.0.3",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
