Update .gitignore file, add less import image feature, compress css & js

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": [[
+    "es2015",
+    {
+      "module": false
+    }
+  ], "stage-0"],
   "plugins": ["transform-runtime"]
 }
