--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "optimize-css-assets-webpack-plugin": "^1.3.2",
     "url-loader": "^0.5.8",
     "vue": "^2.3.3",
     "vue-img-placeholder": "^0.0.2",
